feat: train diffusion

--- a/model/diffusion/diffusion_fast_sampling.ipynb
+++ b/model/diffusion/diffusion_fast_sampling.ipynb
@@ -352,6 +352,72 @@
     "%timeit -r 1 sample_ddim(32, n=25)\n",
     "%timeit -r 1 sample_ddpm(32, )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = CustomDataset(\"./sprites_1788_16x16.npy\", \"./sprite_labels_nc_1788_16x16.npy\", transform, null_context=False)\n",
+    "dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True, num_workers=1)\n",
+    "optim = torch.optim.Adam(nn_model.parameters(), lr=lrate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# helper function: perturbs an image to a specified noise level\n",
+    "def perturb_input(x, t, noise):\n",
+    "    return ab_t.sqrt()[t, None, None, None] * x + (1 - ab_t[t, None, None, None]) * noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training without context code\n",
+    "\n",
+    "# set into train mode\n",
+    "nn_model.train()\n",
+    "\n",
+    "for ep in range(n_epoch):\n",
+    "    print(f'epoch {ep}')\n",
+    "    \n",
+    "    # linearly decay learning rate\n",
+    "    optim.param_groups[0]['lr'] = lrate*(1-ep/n_epoch)\n",
+    "    \n",
+    "    pbar = tqdm(dataloader, mininterval=2 )\n",
+    "    for x, _ in pbar:   # x: images\n",
+    "        optim.zero_grad()\n",
+    "        x = x.to(device)\n",
+    "        \n",
+    "        # perturb data\n",
+    "        noise = torch.randn_like(x)\n",
+    "        t = torch.randint(1, timesteps + 1, (x.shape[0],)).to(device) \n",
+    "        x_pert = perturb_input(x, t, noise)\n",
+    "        \n",
+    "        # use network to recover noise\n",
+    "        pred_noise = nn_model(x_pert, t / timesteps)\n",
+    "        \n",
+    "        # loss is mean squared error between the predicted and true noise\n",
+    "        loss = F.mse_loss(pred_noise, noise)\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        optim.step()\n",
+    "\n",
+    "    # save model periodically\n",
+    "    if ep%4==0 or ep == int(n_epoch-1):\n",
+    "        if not os.path.exists(save_dir):\n",
+    "            os.mkdir(save_dir)\n",
+    "        torch.save(nn_model.state_dict(), save_dir + f\"model_{ep}.pth\")\n",
+    "        print('saved model at ' + save_dir + f\"model_{ep}.pth\")"
+   ]
   }
  ],
  "metadata": {
